--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "framer-motion": "^11.9.0",
     "install": "^0.13.0",
     "lucide-react": "^0.446.0",
-    "midtrans-client": "^1.4.1",
     "next": "14.2.13",
     "prisma": "^5.20.0",
     "react": "^18",
@@ -38,7 +37,7 @@
     "react-dropzone": "^14.2.9",
     "react-rnd": "^10.4.13",
     "sharp": "^0.32.6",
-    "stripe": "15.4.0",
+    "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.0",
